tests/ui/g-roleprogram-witness-mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/g-roleprogram-witness-mismatch.rs:9:58
  |
9 | const CLIENT: RoleProgram<'static, 0, StepNil> = project(&PROGRAM);
  |                                                  ------- ^^^^^^^^ expected `&Program<StepNil>`, found `&Program<StepCons<..., ...>>`
  |                                                  |
  |                                                  arguments to this function are incorrect
  |
  = note: expected reference `&Program<StepNil>`
             found reference `&Program<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<1>, ()>>, StepNil>>`
note: function defined here
 --> src/global/role_program.rs
  |
  | pub const fn project<'prog, const ROLE: u8, Steps, Mint>(
  |              ^^^^^^^
